increase memory limit and compile both basic and advanced courses